--- a/uim/templates/index.html
+++ b/uim/templates/index.html
@@ -51,7 +51,7 @@
               <a href="#" class="navbar-brand fw-semibold">
                 PROGRAM AKADEMIK :</a><br>
                 <br>
-              <a href="#" class="header-skill d-inline-flex align-items-center gap-2">
+              <a href="fakultasteknik.html" class="header-skill d-inline-flex align-items-center gap-2">
                 Fakultas Teknik <i class="bx bx-right-arrow-alt fs-4"></i>
               </a> <br>
               <a href="#" class="header-skill d-inline-flex align-items-center gap-2">
@@ -78,7 +78,9 @@
 
               <div class="d-flex align-items-center gap-4 mt-5">
                 <div class="d-flex align-items-center gap-2">
-                  <h2 class="header-skill fs-7 mb-1">@Tahun2023</h2>
+                  <footer>
+                    <p>Hak Cipta &copy; 2023 | UIM-Pamekasan</p>
+                  </footer>
                 </div>
                 <div class="d-flex align-items-center gap-2">
                   
