--- a/uim/templates/index.html
+++ b/uim/templates/index.html
@@ -54,7 +54,7 @@
               <a href="fakultasteknik.html" class="header-skill d-inline-flex align-items-center gap-2">
                 Fakultas Teknik <i class="bx bx-right-arrow-alt fs-4"></i>
               </a> <br>
-              <a href="#" class="header-skill d-inline-flex align-items-center gap-2">
+              <a href="fakultasmipa.html" class="header-skill d-inline-flex align-items-center gap-2">
                 Fakultas MIPA <i class="bx bx-right-arrow-alt fs-4"></i>
               </a> <br>
               <a href="fakultasagamaislam.html" class="header-skill d-inline-flex align-items-center gap-2">
