fakultas pendidikan agama islam bisa diklik

--- a/uim/templates/fakultasmipa.html
+++ b/uim/templates/fakultasmipa.html
@@ -52,7 +52,7 @@
     <p>=> Prodi S1 MATEMATIKA dengan gelar (S.Si)</p>
     <h3>VISI DAN MISI</h3>
     <h3>Visi :</h3>
-    <p>1. Menjadi program studi terkemuka di Indonesia dan diakui di tingkat regional terutama dalam bidang analisis, statistika dan komputasi untuk mendukung dan mengembangkan matematika terapan pada bidang industri, kelautan, kebencanaan dan teknologi informasi yang berkarakter Islam Ahlus Sunnah Wal-jamaah.</p>
+    <p>Menjadi program studi terkemuka di Indonesia dan diakui di tingkat regional terutama dalam bidang analisis, statistika dan komputasi untuk mendukung dan mengembangkan matematika terapan pada bidang industri, kelautan, kebencanaan dan teknologi informasi yang berkarakter Islam Ahlus Sunnah Wal-jamaah.</p>
     <h3>Misi :</h3>
     <p>1. Menyelenggarakan pendidikan berbasis teknologi informasi dan komunikasi untuk menghasilkan lulusan yang bertaqwa kepada Tuhan yang Maha Esa, kreatif, inovatif, berjiwa wirausaha dan mempunyai kemampuan untuk menganalisa masalah secara sistematis dan logis, untuk mendukung pembangunan berkelanjutan yang sesuai kebutuhan stakeholders, serta tanggap terhadap perkembangan sains dan teknologi.</p>
     <p>2. Meningkatkan kualitas penelitian matematika dan terapannya bertaraf nasional maupun internasional yang menunjang sains dan teknologi terutama dalam bidang industri, kelautan, kebencanaan dan teknologi informasi.</p>
