--- a/uim/templates/index.html
+++ b/uim/templates/index.html
@@ -57,7 +57,7 @@
               <a href="fakultasmipa.html" class="header-skill d-inline-flex align-items-center gap-2">
                 Fakultas MIPA <i class="bx bx-right-arrow-alt fs-4"></i>
               </a> <br>
-              <a href="fakultasagamaislam.html" class="header-skill d-inline-flex align-items-center gap-2">
+              <a href="fakultas_pai.html" class="header-skill d-inline-flex align-items-center gap-2">
                 Fakultas Agama Islam <i class="bx bx-right-arrow-alt fs-4"></i>
               </a> <br>
               <a href="fakultaspertanian.html" class="header-skill d-inline-flex align-items-center gap-2">
