perubahan font pada text

--- a/uim/templates/fakultas_pai.html
+++ b/uim/templates/fakultas_pai.html
@@ -9,7 +9,7 @@
       line-height: 1.6;
       margin: 0;
       padding: 0;
-      background-color: #71ba40; /* Warna latar belakang keseluruhan halaman */
+      background-color: #71ba40;
     }
     header {
       background-color: #2968a2;
@@ -51,25 +51,25 @@
     <a href="#section2">Hukum Keluarga (Ahwal Akhsyahsiyah)</a> 
   </nav>
 
-  
   <article>
     <section id="section1">
-        <h2>Pendidikan Agama Islam</h2>
-        <h3>Visi :</h3>
-        <p>Program Studi Pendidikan Agama Islam Universitas Islam Madura menjadi pusat pendidikan, kajian, dan pengembangan ilmu keislaman untuk melahirkan sarjana Pendidikan Agama Islam profesional.</p>
-        <h3>Misi :<h3>
-        <p>1. Menyelenggarakan kegiatan pendidikan akademik yang profesional di bidang Pendidikan Agama Islam.</p>
-        <p>2. Mengembangkan keilmuan bidang Pendidikan Agama Islam melalui kegiatan penelitian dan pengabdian kepada masyarakat.</p>
-        <p>3. Menyebarluaskan hasil kajian keilmuan bidang Pendidikan Agama Islam, melalui program in service training dan program penelitian yang relevan.</p>
+      <h2>=> Pendidikan Agama Islam</h2>
+      <h3>Visi :</h3>
+      <p>Program Studi Pendidikan Agama Islam Universitas Islam Madura menjadi pusat pendidikan, kajian, dan pengembangan ilmu keislaman untuk melahirkan sarjana Pendidikan Agama Islam profesional.</p>
+      <h3>Misi :</h3>
+      <p>1. Menyelenggarakan kegiatan pendidikan akademik yang profesional di bidang Pendidikan Agama Islam.</p>
+      <p>2. Mengembangkan keilmuan bidang Pendidikan Agama Islam melalui kegiatan penelitian dan pengabdian kepada masyarakat.</p>
+      <p>3. Menyebarluaskan hasil kajian keilmuan bidang Pendidikan Agama Islam, melalui program in service training dan program penelitian yang relevan.</p>
     </section>
+    
     <section id="section2">
-        <h2>Hukum Keluarga (Ahwal Akhsyahsiyah)</h2>
-        <h3>Visi :</h3>
-        <p>Terwujudnya Program Studi yang handal dalam mencetak Sarjana Hukum Islam yang profesional, peka terhadap perkembangan masyarakat dan tepat dalam mengambil kebijakan di bidang hukum Islam dan Hukum Positif dengan berkarakter Ahlus Sunnah Wal Jama’ah.</p>
-        <h3>Misi :<h3>
-        <p>1. Menyelenggarakan pendidikan dan pengajaran yang unggul untuk menghasilkan Sarjana Hukum Islam yang profesional dan berdedikasi tinggi dalam mengabdikan keahliannya sebagai pemikir serta praktisi hukum Islam dan hukum positif.</p>
-        <p>2. Melakukan penelitian dalam hukum Islam dan Hukum Positif di Indonesia yang terintegrasi dengan ipteks-sosbud.</p>
-        <p>3. Melaksanakan pengabdian masyarakat di bidang hukum Islam dan positif dengan berkarakter Ahlus Sunnah Wal Jama’ah.</p>
+      <h2>=> Hukum Keluarga (Ahwal Akhsyahsiyah)</h2>
+      <h3>Visi :</h3>
+      <p>Terwujudnya Program Studi yang handal dalam mencetak Sarjana Hukum Islam yang profesional, peka terhadap perkembangan masyarakat dan tepat dalam mengambil kebijakan di bidang hukum Islam dan Hukum Positif dengan berkarakter Ahlus Sunnah Wal Jama’ah.</p>
+      <h3>Misi :</h3>
+      <p>1. Menyelenggarakan pendidikan dan pengajaran yang unggul untuk menghasilkan Sarjana Hukum Islam yang profesional dan berdedikasi tinggi dalam mengabdikan keahliannya sebagai pemikir serta praktisi hukum Islam dan hukum positif.</p>
+      <p>2. Melakukan penelitian dalam hukum Islam dan Hukum Positif di Indonesia yang terintegrasi dengan ipteks-sosbud.</p>
+      <p>3. Melaksanakan pengabdian masyarakat di bidang hukum Islam dan positif dengan berkarakter Ahlus Sunnah Wal Jama’ah.</p>
     </section>
 </body>
 </html>
