--- a/uim/templates/fakultasmipa.html
+++ b/uim/templates/fakultasmipa.html
@@ -9,7 +9,7 @@
       line-height: 1.6;
       margin: 0;
       padding: 0;
-      background-color: #71ba40; /* Warna latar belakang keseluruhan halaman */
+      background-color: #71ba40; 
     }
     header {
       background-color: #2968a2;
