--- a/uim/templates/fakultasteknik.html
+++ b/uim/templates/fakultasteknik.html
@@ -9,7 +9,7 @@
       line-height: 1.6;
       margin: 0;
       padding: 0;
-      background-color: #71ba40; /* Warna latar belakang keseluruhan halaman */
+      background-color: #71ba40; 
     }
     header {
       background-color: #2968a2;
@@ -54,13 +54,13 @@
   
   <article>
     <section id="section1">
-      <h2>Teknik Informatika</h2>
+      <h2>=> Teknik Informatika</h2>
       <p>Teknik informatika merupakan disiplin ilmu yang menginduk pada ilmu komputer, yang pada dasarnya merupakan kumpulan disiplin ilmu dan teknik yang secara khusus menangani masalah transformasi atau pengolahan fakta-fakta simbolik (data) dengan memanfaatkan seoptimal mungkin teknologi komputer.
       <p>Program studi Informatika membekali generasi muda dengan pengetahuan dan keahlian dalam  bidang applied computing yang mampu memahami, mengembangkan, dan menciptakan berbagai aplikasi perangkat lunak  berbasis mobile dan web seperti Multimedia & Animation Fokus dalam bidang game design & programming berbasis mobile technology. Networking Fokus pada perancangan dan pemeliharaan jaringan dan terutama pada pengembangan aplikasi berbasis jaringan. PELUANG KARIR Game Developer, Mobile Apps. Developer, Multimedia Developer, Software Engineer, Programmer, DigitalPreneur, Network Designer, Network Administrator</p>
     </section>
 
     <section id="section2">
-      <h2>Sistem Informasi</h2>
+      <h2>=> Sistem Informasi</h2>
       <p>Sistem Informasi (SI) adalah kombinasi dari teknologi informasi dan aktivitas orang yang menggunakan teknologi itu untuk mendukung operasi dan manajemen. Dalam arti yang sangat luas, istilah sistem informasi yang sering digunakan merujuk kepada interaksi antara orang, proses algoritmik, data, dan teknologi.</p>
       <p>Prodi Sistem Informasi merupakan salah satu program studi yang menekankan pada pemanfaatan teknologi dan informasi dalam menunjang kegiatan perusahaan. Dalam prodi Sistem Informasi, para mahasiswanya akan mempelajari bagaimana sistem akan berjalan dalam suatu perusahaan dengan mengkaji, menerapkan, dan mengembangkan ilmu yang dimilikinya untuk menciptakan rekayasa sistem informasi dalam perusahaan.</p>
       <p>Secara umum Konsentrasi Prodi Sistem Informasi ialah :</p>
