fakultas pertanian bisa diklik

--- a/uim/templates/fakultasmipa.html
+++ b/uim/templates/fakultasmipa.html
@@ -48,9 +48,8 @@
 
   <article>
     <section id="section1">
-    <p>Fakultas Matematika dan IPA memiliki satu Prodi yaitu:</p>
-    <p>=> Prodi S1 MATEMATIKA dengan gelar (S.Si)</p>
-    <h3>VISI DAN MISI</h3>
+    <h2>Fakultas Matematika dan IPA memiliki satu Prodi yaitu:</h2>
+    <h3>=> Prodi S1 MATEMATIKA dengan gelar (S.Si)</h3>
     <h3>Visi :</h3>
     <p>Menjadi program studi terkemuka di Indonesia dan diakui di tingkat regional terutama dalam bidang analisis, statistika dan komputasi untuk mendukung dan mengembangkan matematika terapan pada bidang industri, kelautan, kebencanaan dan teknologi informasi yang berkarakter Islam Ahlus Sunnah Wal-jamaah.</p>
     <h3>Misi :</h3>
