fakultas fkip bisa diklik dan penambahan teks

--- a/uim/templates/fakultas_fkip.html
+++ b/uim/templates/fakultas_fkip.html
@@ -42,21 +42,16 @@
 <body>
 
   <header>
-    <h1>Fakultas Ekonomi</h1>
+    <h1>Fakultas Keguruan Dan Ilmu Pengetahuan</h1>
     <p>Dibuat: Moh Wakid | Tanggal: 31 Desember 2023</p>
   </header>
-
+  
   <article>
-    <section id="section1">
-    <h2>Fakultas Ekonomi memiliki satu Prodi yaitu:</h2>
-    <h3>=> Prodi S1 AKUTANSI</h3>
-    <h3>Visi :</h3>
-    <p>Menjadi Program Studi Akuntansi yang Unggul dibidang Akuntansi Syari’ah Berlandaskan Nilai-Nilai Islam Ahlussunnah Wal Jamaah pada Tahun 2025.</p>
-    <h3>Misi :</h3>
-    <p>1. Menyelenggarakan pendidikan yang unggul dibidang Akuntansi Syariah Berlandaskan Nilai-Nilai Islam Ahlussunnah Wal Jama’ah.</p>
-    <p>2. Menyelenggarakan Penelitian yang unggul dibidang Akuntansi Syariah Berlandaskan Nilai-Nilai Islam Ahlussunnah Wal Jama’ah.</p>
-    <p>3. Menyelenggarakan Pengabdian Masyarakat yang unggul dibidang Akuntansi Syariah Berlandaskan Nilai-Nilai Islam Ahlussunnah Wal Jama’ah.</p>
-    <p>4. Melakukan kerjasama dengan lembaga keuangan syariah.</p>
-    </section>
+      <h3>Fakultas Keguruan dan Ilmu Pendidikan (FKIP) memiliki Empat Prodi yaitu:</h3>
+      <p>1. S1 Pendidikan Fisika, dengan gelar (S.Pd)</p>
+      <p>2. S1 Pendidikan Bahasa Inggris, dengan gelar (S.Pd)</p>
+      <p>3. S1 Pendidikan Biologi, dengan gelar (S.Pd)</p>
+      <p>4. S1 Pendidikan Anak Usia Dini, dengan gelar (S.Pd)</p>
+  </article>
 </body>
 </html>
