--- a/uim/templates/index.html
+++ b/uim/templates/index.html
@@ -66,7 +66,7 @@
               <a href="fakultasekonomi.html" class="header-skill d-inline-flex align-items-center gap-2">
                 Fakultas Ekonomi <i class="bx bx-right-arrow-alt fs-4"></i>
               </a> <br>
-              <a href="fakultasfkip.html" class="header-skill d-inline-flex align-items-center gap-2">
+              <a href="fakultas_fkip.html" class="header-skill d-inline-flex align-items-center gap-2">
                 Fakultas FKIP <i class="bx bx-right-arrow-alt fs-4"></i>
               </a> <br>
               <a href="#" class="header-skill d-inline-flex align-items-center gap-2">
