fakultas ilmu kesehatan bisa diklik dan penambahan teks HTML

--- a/uim/templates/index.html
+++ b/uim/templates/index.html
@@ -69,7 +69,7 @@
               <a href="fakultas_fkip.html" class="header-skill d-inline-flex align-items-center gap-2">
                 Fakultas FKIP <i class="bx bx-right-arrow-alt fs-4"></i>
               </a> <br>
-              <a href="#" class="header-skill d-inline-flex align-items-center gap-2">
+              <a href="fakultasilmukesehatan.html" class="header-skill d-inline-flex align-items-center gap-2">
                 Fakultas Ilmu Kesehatan <i class="bx bx-right-arrow-alt fs-4"></i>
               </a> <br>
               <a href="#" class="header-skill d-inline-flex align-items-center gap-2">
