--- a/uim/templates/index.html
+++ b/uim/templates/index.html
@@ -72,7 +72,7 @@
               <a href="fakultasilmukesehatan.html" class="header-skill d-inline-flex align-items-center gap-2">
                 Fakultas Ilmu Kesehatan <i class="bx bx-right-arrow-alt fs-4"></i>
               </a> <br>
-              <a href="#" class="header-skill d-inline-flex align-items-center gap-2">
+              <a href="fakultashukum.html" class="header-skill d-inline-flex align-items-center gap-2">
                 Fakultas Hukum<i class="bx bx-right-arrow-alt fs-4"></i>
               </a> <br>
 
