--- a/uim/templates/fakultasilmukesehatan.html
+++ b/uim/templates/fakultasilmukesehatan.html
@@ -48,8 +48,8 @@
 
   <article>
     <h3>=> Fakultas Ilmu Kesehatan memiliki Dua Prodi yaitu:</h3>
-    <h3>1. D3 Kebidanan</h3>
-    <h3>2. D3 Farmasi</h3>
+    <p>1. D3 Kebidanan</p>
+    <p>2. D3 Farmasi</p>
 
     <h3>=> Visi & Misi Fakultas Ilmu Kesehatan :</h3>
     <h3>Visi :</h3>
