--- a/uim/templates/fakultaspertanian.html
+++ b/uim/templates/fakultaspertanian.html
@@ -48,12 +48,16 @@
 
   <nav>
     <a href="#section1">S1 Agrobisnis Perikanan</a> |
-    <a href="#section2">S1 Agrobisnis</a> |
+    <a href="#section2">S1 Agribisnis</a> |
     <a href="#section3">S1 Agroteknologi</a> |
   </nav>
 
   
   <article>
+    <h3>=> Fakultas Pertanian memiliki Tiga Prodi yaitu:</h3>
+    <p>1. S1 Agrobisnis Perikanan</p>
+    <p>2. S1 Agribisnis</p>
+    <p>3. S1 Agroteknologi</p>
     <section id="section1">
       <h2>=> Visi Misi Agrobisnis Perikanan</h2>
       <h3>Visi :</h3>
