--- a/uim/templates/fakultasteknik.html
+++ b/uim/templates/fakultasteknik.html
@@ -57,6 +57,14 @@
       <h2>=> Teknik Informatika</h2>
       <p>Teknik informatika merupakan disiplin ilmu yang menginduk pada ilmu komputer, yang pada dasarnya merupakan kumpulan disiplin ilmu dan teknik yang secara khusus menangani masalah transformasi atau pengolahan fakta-fakta simbolik (data) dengan memanfaatkan seoptimal mungkin teknologi komputer.
       <p>Program studi Informatika membekali generasi muda dengan pengetahuan dan keahlian dalam  bidang applied computing yang mampu memahami, mengembangkan, dan menciptakan berbagai aplikasi perangkat lunak  berbasis mobile dan web seperti Multimedia & Animation Fokus dalam bidang game design & programming berbasis mobile technology. Networking Fokus pada perancangan dan pemeliharaan jaringan dan terutama pada pengembangan aplikasi berbasis jaringan. PELUANG KARIR Game Developer, Mobile Apps. Developer, Multimedia Developer, Software Engineer, Programmer, DigitalPreneur, Network Designer, Network Administrator</p>
+      <h3>Visi :</h3>
+      <p>Pada tahun 2027 menjadi program studi Teknik Informatika yang unggul di bidangBig Datadan loT yang berkarakter Ahlus Sunnah Wal-jamaah.</p>
+      <h3>Misi :</h3>
+      <p>1. Menyelenggarakan layanan pendidikan dan pembelajaran keilmuan Teknik Informatika bidang Big Data dan loT yang berkualitas dan relevan dengan kebutuhan berkarakter Ahlus Sunnah Wal-jamaah.</p>
+      <p>2. Melakukan penelitian dan pengabdian kepada masyarakat bidang Big Data dan loT yang berkesinambungan berbasis potensi lokal dalam mendukung proses pembelajaran dan publikasi ilmiah.</p>
+      <p>3. Meningkatkan pemanfaatan keilmuan Teknik Informatika bidang Big Data dan loT dalam proses percepatan difusi dan pemanfataan iptek bagi masyarakat.</p>
+      <4>4. Memperluas jaringan kerjasama dengan instansi pemerintah, swasta, dunia usaha dan industri, pondok pesantren, alumni dan lembaga pendidikan di dalam dan luar negeri.</4>
+      <p>5. Meningkatkan ketersediaan sumber daya berupa SDM, sarana dan prasarana secara litas dan kuantitas.</p>
     </section>
 
     <section id="section2">
@@ -70,6 +78,14 @@
       <p>Konsentrasi ini akan membekali peminatnya dengan keahlian dan keterampilan dalam merancang sistem informasi multimedia, seperti pembuatan software E-Learning dengan menggunakan CD atau DVD.</p>
       <p>3. Sistem Informasi Entreprise<p>
       <p>Konsentrasi ini akan membekali peminatnya dengan kemampuan untuk menganalisis, merancang, dan mengimplementasikan sistem informasi entreprise. Peminat konsentrasi ini diharapkan mampu dalam meningkatkan efektivitas dan efisiensi kegiatan bisnis serta mampu dalam meng-optimalisasi kegiatan operasional perusahaan dengan pemanfaatan teknologi informasi.</p>
+      <h3>Visi :</h3>
+      <p>Pada tahun 2027 menjadi program studi sistem informasi yang unggul di bidanginformation managament berkarakter Ahlus Sunnah Wal-jamaah.</p>
+      <h3>Misi :</h3>
+      <p>1. Menyelenggarakan layanan pendidikan dan pembelajaran keilmuan sistem informasi bidang information managament yang berkualitas dan relevan dengan kebutuhan berkarakter Ahlus Sunnah Wal-jamaah.</p>
+      <p>2. Melakukan penelitian dan pengabdian kepada masyarakat bidang information managament yang berkesinambungan berbasis potensi lokal dalam mendukung proses pembelajaran dan publikasi ilmiah.</p>
+      <p>3. Meningkatkan pemanfaatan keilmuan sistem informasi bidang information managament dalam proses percepatan difusi dan pemanfataan iptek bagi masyarakat.</p>
+      <p>4. Memperluas jaringan kerjasama dengan instansi pemerintah, swasta, dunia usaha dan industri, pondok pesantren, alumni dan lembaga pendidikan di dalam dan luar negeri.</p>
+      <p>5. Meningkatkan ketersediaan sumber daya berupa SDM, sarana dan prasarana secara kualitas dan kuantitas.</p>
     </section>
 </body>
 </html>
