--- a/uim/templates/fakultashukum.html
+++ b/uim/templates/fakultashukum.html
@@ -42,7 +42,7 @@
 <body>
 
   <header>
-    <h1>Fakultas Teknik</h1>
+    <h1>Fakultas Hukum</h1>
     <p>Dibuat: Moh Wakid | Tanggal: 31 Desember 2023</p>
   </header>
 
