--- a/uim/templates/fakultasilmukesehatan.html
+++ b/uim/templates/fakultasilmukesehatan.html
@@ -42,7 +42,7 @@
 <body>
 
   <header>
-    <h1>Fakultas Teknik</h1>
+    <h1>Fakultas Ilmu Kesehatan</h1>
     <p>Dibuat: Moh Wakid | Tanggal: 30 Desember 2023</p>
   </header>
 
