--- a/uim/templates/index.html
+++ b/uim/templates/index.html
@@ -8,7 +8,6 @@
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="{% static 'css/boxicons.min.css' %}">
 
 </head>
@@ -52,28 +51,28 @@
                 PROGRAM AKADEMIK :</a><br>
                 <br>
               <a href="fakultasteknik.html" class="header-skill d-inline-flex align-items-center gap-2">
-                Fakultas Teknik <i class="bx bx-right-arrow-alt fs-4"></i>
+                Fakultas Teknik 
               </a> <br>
               <a href="fakultasmipa.html" class="header-skill d-inline-flex align-items-center gap-2">
-                Fakultas MIPA <i class="bx bx-right-arrow-alt fs-4"></i>
+                Fakultas MIPA 
               </a> <br>
               <a href="fakultas_pai.html" class="header-skill d-inline-flex align-items-center gap-2">
-                Fakultas Agama Islam <i class="bx bx-right-arrow-alt fs-4"></i>
+                Fakultas Agama Islam 
               </a> <br>
               <a href="fakultaspertanian.html" class="header-skill d-inline-flex align-items-center gap-2">
-                Fakultas Pertanian <i class="bx bx-right-arrow-alt fs-4"></i>
+                Fakultas Pertanian 
               </a> <br>
               <a href="fakultasekonomi.html" class="header-skill d-inline-flex align-items-center gap-2">
-                Fakultas Ekonomi <i class="bx bx-right-arrow-alt fs-4"></i>
+                Fakultas Ekonomi 
               </a> <br>
               <a href="fakultas_fkip.html" class="header-skill d-inline-flex align-items-center gap-2">
-                Fakultas FKIP <i class="bx bx-right-arrow-alt fs-4"></i>
+                Fakultas FKIP 
               </a> <br>
               <a href="fakultasilmukesehatan.html" class="header-skill d-inline-flex align-items-center gap-2">
-                Fakultas Ilmu Kesehatan <i class="bx bx-right-arrow-alt fs-4"></i>
+                Fakultas Ilmu Kesehatan 
               </a> <br>
               <a href="fakultashukum.html" class="header-skill d-inline-flex align-items-center gap-2">
-                Fakultas Hukum<i class="bx bx-right-arrow-alt fs-4"></i>
+                Fakultas Hukum
               </a> <br>
 
               <div class="d-flex align-items-center gap-4 mt-5">
@@ -96,15 +95,6 @@
           </div>
         </div>  
       </section>
-
-    <script src="{% static 'vendors/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     
-    <script>
-      var swiper = new Swiper(".portofolio-swiper", {
-        slidesPerView: 3,
-        spaceBetween: 30,
-      });
-    </script>
 </body>
 </html>
