--- a/uim/templates/index.html
+++ b/uim/templates/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROFILE KAMPUS</title>
 
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/boxicons.min.css' %}">
 
 </head>
 <body>
@@ -95,6 +94,8 @@
           </div>
         </div>  
       </section>
-    
+
+    <script src="{% static 'js/jquery.js' %}"></script> 
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 </html>
