--- a/uim/templates/fakultasekonomi.html
+++ b/uim/templates/fakultasekonomi.html
@@ -49,7 +49,7 @@
   <article>
     <section id="section1">
     <h2>Fakultas Ekonomi memiliki satu Prodi yaitu:</h2>
-    <h3>=> Prodi S1 AKUTANSI</h3>
+    <p>1. Prodi S1 AKUTANSI</p>
     <h3>Visi :</h3>
     <p>Menjadi Program Studi Akuntansi yang Unggul dibidang Akuntansi Syari’ah Berlandaskan Nilai-Nilai Islam Ahlussunnah Wal Jamaah pada Tahun 2025.</p>
     <h3>Misi :</h3>
