--- a/uim/templates/visimisi.html
+++ b/uim/templates/visimisi.html
@@ -10,7 +10,7 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #71ba40;
+            background-color: #71ba40; 
         }
         header {
             background-color: #2968a2; 
@@ -25,45 +25,30 @@
             background-color: #0ca638; 
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
         }
-        section {
-            margin-bottom: 10px;
+        ul {
+            list-style-type: none;
+            padding: 0;
         }
-        h2 {
-            text-align: center;
-        }
-        section p {
-            text-align: justify;
+        li {
+            margin-bottom: 15px;
+            padding: 10px;
+            background-color: #37c7ad;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Visi Misi Dan Tujuan Universitas Islam Madura</h1>
+        <h1>Visi & Misi Universitas Islam Madura</h1>
     </header>
     <main>
-        <section>
-            <h2>VISI</h2>
-            <p>Menjadi Perguruan Tinggi Unggul dan berdaya saing di Tingkat Asia Tahun 2045 yang berkarakter Islam Ahlus Sunnah Wal-jamaah</p>
-            
-            <h2>MISI</h2>
-            <p>1. Menyelenggarakan pendidikan akademik, pendidikan vokasi, pendidikan profesi dan pendidikan spesialis serta mengembangkan program-program studi yang bermutu dan menjadi rujukan masyarakat Asia dengan tata kelola pendidikan yang amanah, baik dan terbuka (open and good governance university).</p>
-            <p>2. Melaksanakan penelitian dan pengabdian masyarakat yang unggul dan bereputasi Asia;</p>
-            <p>3. Meningkatkan kualitas tenaga pendidik dan tenaga kependidikan yang kompeten sesuai dengan kebutuhan dan pengembangan kelembagaan;</p>
-            <p>4. Mencetak lulusan yang memiliki kemantapan aqidah, keagungan akhlak, profesional dan kemampuan teknopreneur berkarakter Islam Ahulussunnah Wal-Jamaah.</p>
-            <p>5. Melakukan pengembangan dan penyebarluasan ilmu pengetahuan, teknologi,seni, dan budaya serta meningkatkan taraf kehidupan masyarakat.</p>
-            <p>6. Terwujudnya perguruan tinggi yang memiliki tata kelola yang baik, bersih, dan akuntabel dalam pelaksanaan otonomi perguruan tinggi.</p>
-            <p>7. Menghasilkan sumber daya manusia yang beriman dan bertaqwa kepada Allah SWT, berahlak mulia, memiliki wawasan luas, memiliki kompetensi, dan berpartisipasi dalam pembangunan dan hidup ditengah-tengah masyarakat dengan menerapkan nilai-nilai islam ahlussunnah wal jamaah;</p>
-            <p>8. Terwujudnya kualitas tenaga pendidik dan tenaga kependidikan yang kompeten sesuai dengan kebutuhan dan pengembangan kelembagaan;</p>
-            <p>9. Menghasilkan lulusan berkualitas, professional, bersikap ilmiah, menguasai ilmu dan teknologi, berakhlakul karimah, beriman dan bertakwa, serta berprilaku Islam Ahlussunnah Wal-Jama’ah.</p>
-            <p>10. Menerapkan ilmu pengetahuan, penemuan, teknologi yang mutakhir, seni, budaya yang dapat dipertanggungjawabkan  untuk meningkatkan taraf hidup masyarakat</p>
-           
-            <h2>TUJUAN UIM</h2>
-            <p>1. Terwujudnya perguruan tinggi yang memiliki tata kelola yang baik, bersih, dan akuntabel dalam pelaksanaan otonomi perguruan tinggi.</p>
-            <p>2. Menghasilkan sumber daya manusia yang beriman dan bertaqwa kepada Allah SWT, berahlak mulia, memiliki wawasan luas, memiliki kompetensi, dan berpartisipasi dalam pembangunan dan hidup ditengah-tengah masyarakat dengan menerapkan nilai-nilai islam ahlussunnah wal jamaah;</p>
-            <p>3. Terwujudnya kualitas tenaga pendidik dan tenaga kependidikan yang kompeten sesuai dengan kebutuhan dan pengembangan kelembagaan;</p>
-            <P>4. Menghasilkan lulusan berkualitas, professional, bersikap ilmiah, menguasai ilmu dan teknologi, berakhlakul karimah, beriman dan bertakwa, serta berprilaku Islam Ahlussunnah Wal-Jama’ah.</P>
-            <P>5. Menerapkan ilmu pengetahuan, penemuan, teknologi yang mutakhir, seni, budaya yang dapat dipertanggungjawabkan untuk meningkatkan taraf hidup masyarakat</P>
-        </section>
+        <ul>
+            {% for item in visimisi %}
+                <li>
+                    <strong>Visi:</strong> {{ item.visi }} <br>
+                    <strong>Misi:</strong> {{ item.misi }}
+                </li>
+            {% endfor %}
+        </ul>
     </main>
 </body>
 </html>
